Updated CSS, Index, Portfolio Files, New Photos

--- a/index.html
+++ b/index.html
@@ -1,17 +1,63 @@
+<!--Template used from https://codepen.io/ImBobby/pen/mxqKL-->
 <!DOCTYPE html>
 
     <head>
         <meta charset="utf-8">
-        
-        <title>About Me</title>
-        <meta name="description" content="">
+        <link rel="icon" type="image/png" href="./assets/mr-logo-icon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./Reset.css">
-
-    </head>
-    <body>
-
+        <meta name="description" content="Biography">
+        <link rel="stylesheet" href="./stylesheets/Reset.css">
+        <link rel="stylesheet" href="./stylesheets/stylesheet.css">
+        <!--Font Style - Why is this not working?-->
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" >
+        <!-- CSS only -->
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <!-- JS, Popper.js, and jQuery -->
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
         
-        <script src="" async defer></script>
-    </body>
+        <title>So Responsive</title>
+    </head>
+
+    <header class="clearfix">
+        <div class="container">
+                <div class="header-left">
+                    <h1>Michael Rudolph</h1>
+                </div>
+                <div class="header-right">
+                    <label for="open">
+                        <span class="hidden-desktop"></span>
+                    </label>
+                    <input type="checkbox" name="" id="open">
+                    <nav>
+                        <a href="index.html">Home</a>
+                        <a href="portfolio.html">Portfolio</a>
+                        <a href="contact.html">Contact</a>
+                    </nav>
+                </div>
+            </div>
+        </header>
+    <section class="clearfix">
+            <div class="container">
+                <div class="section-left">
+                    <h1 class="section-title">A little about me...</h1>
+                </div>
+            </div>
+        </section>
+        <br>
+    <article>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab. </p>
+        <br>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab. </p>
+        <br>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab. </p>
+        <br>
+        <p>Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab. </p>
+    </article>
+        <br>
+    <footer>
+        <h6>Thank you for stopping by!</h6>
+        <p>&copy; Michael Rudolph</p>
+        </footer>
 </html>
