--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,84 @@
+<!--Template used from https://codepen.io/ImBobby/pen/mxqKL-->
 <!DOCTYPE html>
 
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="">
         <link rel="icon" type="image/png" href="./assets/mr-logo-icon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--<link rel="stylesheet" href="./stylesheets/Reset.css">-->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-        <title>So Responsive</title>
-        <H1>Michael Rudolph</H1>
-        <nav> 
-            <button type="button" class="btn btn-link">Home</button>
-            <button type="button" class="btn btn-link">Contact</button>
-            <button type="button" class="btn btn-link">Portfolio</button>
-        </nav>
-    </head>
-    <body>
+        <meta name="description" content="Biography">
+        <link rel="stylesheet" href="./stylesheets/Reset.css">
+        <link rel="stylesheet" href="./stylesheets/stylesheet.css">
+        <!--Font Style - Why is this not working?-->
+            <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" >
+        <!-- CSS only -->
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <!-- JS, Popper.js, and jQuery -->
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
         
+        <title>So Responsive</title>
+    </head>
+
+    <header class="clearfix">
+        <div class="container">
+                <div class="header-left">
+                    <h1>Michael Rudolph</h1>
+                </div>
+                <div class="header-right">
+                    <label for="open">
+                        <span class="hidden-desktop"></span>
+                    </label>
+                    <input type="checkbox" name="" id="open">
+                    <nav>
+                        <a href="index.html">Home</a>
+                        <a href="portfolio.html">Portfolio</a>
+                        <a href="contact.html">Contact</a>
+                    </nav>
+                </div>
+            </div>
+        </header>
+    <section class="clearfix">
+            <div class="container">
+                <div class="section-left">
+                    <h1 class="section-title"> Contact </h1>
+                </div>
+            </div>
+        </section>
         <br>
-        <h2>Contact</h2>
-        <h4>Name</h4>
-        <h4>Email</h4>
-        <h4>Message</h4>
-        <h3>Submit</h3>
-                
-    <footer class="footer">
-        <h4>Looking forward to getting to know you!</h4>
+    <article>
+        <p><h2>Please feel free to reach out to me anytime!</h2></p>
+        <br>
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                </div>
+                <div class="col-6">
+                    <form>
+                        <div class="form-group">
+                          <label for="exampleFormControlInput1">Name</label>
+                          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="John Doe">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Email address</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                          </div>
+                        <div class="form-group">
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleFormControlTextarea1">Message</label>
+                          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                        <button type="button" class="btn btn-light"><h2>Send</h2></button>
+                      </form>
+                </div>
+                <div class="col-3">
+                </div>
+            </div>
+    </article>
+        <br>
+    <footer>
+        <h6>Thank you for stopping by!</h6>
         <p>&copy; Michael Rudolph</p>
-    </footer>
-    </body>
+        </footer>
 </html>
