portfolio Alt txt update, index H1 txt updated, read me deploy address added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="clearfix">
             <div class="container">
                 <div class="section-left">
-                    <h1 class="section-title">A little about me...</h1>
+                    <h1 class="section-title">A little about me</h1>
                 </div>
             </div>
         </section>
