--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
                             <div>
 
                             </div><div class="card" style="width: 20rem;">
-                                <img src="./assets/Crossfit.jpg" class="card-img-top" alt="...">
+                                <img src="./assets/Crossfit.jpg" class="card-img-top" alt="Image not available">
                                 <div class="card-body">
                                 <p class="card-text">Crossfit</p>
                                 <p><span>Photo by <a href="https://unsplash.com/@victorfreitas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Victor Freitas</a> on <a href="https://unsplash.com/s/photos/crossfit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
@@ -67,7 +67,7 @@
                         <div class="col-2"></div>
                         <div class="col-3">
                             <div class="card" style="width: 20rem;">
-                                <img src="./assets/Nature.jpg" class="card-img-top" alt="...">
+                                <img src="./assets/Nature.jpg" class="card-img-top" alt="Image not available">
                                 <div class="card-body">
                                 <p class="card-text">Nature</p>
                                 <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
@@ -80,7 +80,7 @@
                         <div class="col-2"></div>
                         <div class="col-3">
                             <div class="card" style="width: 20rem;">
-                                <img src="./assets/Coding.jpg" class="card-img-top" alt="...">
+                                <img src="./assets/Coding.jpg" class="card-img-top" alt="Image not available">
                                 <div class="card-body">
                                 <p class="card-text">Web Development</p>
                                 <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
@@ -90,7 +90,7 @@
                         <div class="col-2"></div>
                         <div class="col-3">
                             <div class="card" style="width: 20rem;">
-                                <img src="./assets/Dogs.jpg" class="card-img-top" alt="...">
+                                <img src="./assets/Dogs.jpg" class="card-img-top" alt="Image not available">
                                 <div class="card-body">
                                 <p class="card-text">Dogs</p>
                                 <p><span>Photo by <a href="https://unsplash.com/@victorfreitas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Victor Freitas</a> on <a href="https://unsplash.com/s/photos/crossfit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
