html and CSS edits to make portfolio responsive

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,56 +50,46 @@
             <article>
             <p><h2>Below are photos of some of the things that I'm passionate about.</h2></p>
             <br>
-                <div class="container">
-                    <article class="row">
-                        <div class="col-2"></div>
-                        <div class="col-3">
-                            <div>
-
-                            </div><div class="card" style="width: 20rem;">
-                                <img src="./assets/Crossfit.jpg" class="card-img-top" alt="Image not available">
-                                <div class="card-body">
+                <main class="passion">
+                    <article class="crossfit">
+                        <!--Why are the following cards not centered below 700px?-->
+                        <div class="card" style="width: 20rem;">
+                                <img src="./assets/Crossfit.jpg" class="card-img-top" alt="Image not available"> <!--This class is not on CSS-->
+                                <div class="card-body"> <!--This class is not on CSS-->
                                 <p class="card-text">Crossfit</p>
                                 <p><span>Photo by <a href="https://unsplash.com/@victorfreitas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Victor Freitas</a> on <a href="https://unsplash.com/s/photos/crossfit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-2"></div>
-                        <div class="col-3">
+                        </article>
+                    <article class="nature">
                             <div class="card" style="width: 20rem;">
-                                <img src="./assets/Nature.jpg" class="card-img-top" alt="Image not available">
-                                <div class="card-body">
+                                <img src="./assets/Nature.jpg" class="card-img-top" alt="Image not available"> <!--This class is not on CSS-->
+                                <div class="card-body"> <!--This class is not on CSS-->
                                 <p class="card-text">Nature</p>
                                 <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-2"></div>
-                </article>
-                    <article class="row">
-                        <div class="col-2"></div>
-                        <div class="col-3">
+                        </article>
+                    <article class="coding">
                             <div class="card" style="width: 20rem;">
-                                <img src="./assets/Coding.jpg" class="card-img-top" alt="Image not available">
-                                <div class="card-body">
+                                <img src="./assets/Coding.jpg" class="card-img-top" alt="Image not available"> <!--This class is not on CSS-->
+                                <div class="card-body"> <!--This class is not on CSS-->
                                 <p class="card-text">Web Development</p>
                                 <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-2"></div>
-                        <div class="col-3">
+                        </article>
+
+                    <article class="dogs">
                             <div class="card" style="width: 20rem;">
-                                <img src="./assets/Dogs.jpg" class="card-img-top" alt="Image not available">
-                                <div class="card-body">
+                                <img src="./assets/Dogs.jpg" class="card-img-top" alt="Image not available"> <!--This class is not on CSS-->
+                                <div class="card-body"> <!--This class is not on CSS-->
                                 <p class="card-text">Dogs</p>
                                 <p><span>Photo by <a href="https://unsplash.com/@victorfreitas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Victor Freitas</a> on <a href="https://unsplash.com/s/photos/crossfit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-2"></div>
-                    </article>
-            </div>
+                        </article>
+                    </main>
         </article>
     </body>
 
