--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
                     <article class="crossfit">
                         <!--Why are the following cards not centered below 700px?-->
                         <div class="card" style="width: 20rem;">
-                                <img src="./assets/Crossfit.jpg" class="card-img-top" alt="Image not available"> <!--This class is not on CSS-->
+                                <img src="./assets/Crossfit.jpg" class="card-img-top" alt="Image of two friends enjoying a hard workout."> <!--This class is not on CSS-->
                                 <div class="card-body"> <!--This class is not on CSS-->
                                 <p class="card-text">Crossfit</p>
                                 <p><span>Photo by <a href="https://unsplash.com/@victorfreitas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Victor Freitas</a> on <a href="https://unsplash.com/s/photos/crossfit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
@@ -63,7 +63,7 @@
                         </article>
                     <article class="nature">
                             <div class="card" style="width: 20rem;">
-                                <img src="./assets/Nature.jpg" class="card-img-top" alt="Image not available"> <!--This class is not on CSS-->
+                                <img src="./assets/Nature.jpg" class="card-img-top" alt="Image of beautiful forest"> <!--This class is not on CSS-->
                                 <div class="card-body"> <!--This class is not on CSS-->
                                 <p class="card-text">Nature</p>
                                 <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
@@ -72,7 +72,7 @@
                         </article>
                     <article class="coding">
                             <div class="card" style="width: 20rem;">
-                                <img src="./assets/Coding.jpg" class="card-img-top" alt="Image not available"> <!--This class is not on CSS-->
+                                <img src="./assets/Coding.jpg" class="card-img-top" alt="Image of laptop with code on screen"> <!--This class is not on CSS-->
                                 <div class="card-body"> <!--This class is not on CSS-->
                                 <p class="card-text">Web Development</p>
                                 <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
@@ -82,7 +82,7 @@
 
                     <article class="dogs">
                             <div class="card" style="width: 20rem;">
-                                <img src="./assets/Dogs.jpg" class="card-img-top" alt="Image not available"> <!--This class is not on CSS-->
+                                <img src="./assets/Dogs.jpg" class="card-img-top" alt="Image of adorable Siberian Husky"> <!--This class is not on CSS-->
                                 <div class="card-body"> <!--This class is not on CSS-->
                                 <p class="card-text">Dogs</p>
                                 <p><span>Photo by <a href="https://unsplash.com/@victorfreitas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Victor Freitas</a> on <a href="https://unsplash.com/s/photos/crossfit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
