Grid and Photo Updates

--- a/index.html
+++ b/index.html
@@ -20,42 +20,105 @@
         <title>So Responsive</title>
     </head>
 
-    <header class="clearfix">
-        <div class="container">
-                <div class="header-left">
-                    <h1>Michael Rudolph</h1>
-                </div>
-                <div class="header-right">
-                    <label for="open">
-                        <span class="hidden-desktop"></span>
-                    </label>
-                    <input type="checkbox" name="" id="open">
-                    <nav>
-                        <a href="index.html">Home</a>
-                        <a href="portfolio.html">Portfolio</a>
-                        <a href="contact.html">Contact</a>
-                    </nav>
-                </div>
-            </div>
-        </header>
-    <section class="clearfix">
+    <body>
+        <header class="clearfix">
             <div class="container">
-                <div class="section-left">
-                    <h1 class="section-title">A little about me</h1>
+                    <div class="header-left">
+                        <h1>Michael Rudolph</h1>
+                    </div>
+                    <div class="header-right">
+                        <label for="open">
+                            <span class="hidden-desktop"></span>
+                        </label>
+                        <input type="checkbox" name="" id="open">
+                        <nav>
+                            <a href="index.html">Home</a>
+                            <a href="portfolio.html">Portfolio</a>
+                            <a href="contact.html">Contact</a>
+                        </nav>
+                    </div>
+                </div>
+            </header>
+        <section class="clearfix">
+                <div class="container">
+                    <div class="section-left">
+                        <h1 class="section-title">A little about me</h1>
+                    </div>
+                </div>
+            </section>
+            <br>
+        <article class= "container">
+            <div class="container">
+                <div class="row row-cols-2">
+                <div class="col">
+                    <picture>
+                        <img src="./assets/Flight.jpg" class="img-fluid" alt="Responsive image">
+                        <span>Photo by <a href="https://unsplash.com/@rush_intime?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">rashid khreiss</a> on <a href="https://unsplash.com/t/travel?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+                    </picture>
+                    <br>
+                    <br>
+                    <p class="text-center">
+                        <h2>
+                            <strong>Travel</strong>
+                            </h2>          
+                                <p>
+                                    I've been all over the United States, but I've only been out of the country once. I was so young when we took a family trip to Canada that I hardly remember it, so I don't think it really counts.
+                                </p>
+                    </div>
+                <div class="col">
+                    <picture>
+                        <img src="./assets/Kayak.jpg" class="img-fluid" alt="Responsive image">
+                    </picture>
+                    <br>
+                    <br>
+                        <h2>
+                            <strong>Leisure</strong>
+                        </h2>
+                            <p>
+                            When I have the time I love to read fantasy novels. I'll take an epic fantasy novel and a cup of coffee over watching a movie any day.
+                            </p>
+                            <br>
+                            <br>
+                    </div>
+                    
+
+                <div class="col">
+                    <picture>
+                        <img src="./assets/ATV.jpg" class="img-fluid" alt="Responsive image">
+                    </picture>
+                    <br>
+                    <br>
+                        <h2>
+                            <strong>Outside</strong>
+                        </h2>
+                            <p>
+                                I'll take any opportunity to get outside. Hike a mountain? Ride a bike? ATV through the wilderness? Yes please to all!
+                            </p>
+                            <br>
+                            <br>
+                    </div>
+                <div class="col">
+                    <picture>
+                        <img src="./assets/Path.jpg" class="img-fluid" alt="Responsive image">
+                    </picture>
+                    <br>
+                    <br>
+                        <h2>
+                            <strong>More?</strong>
+                        </h2>
+                            <p>
+                                There is so much more! Head over to my Portfolio, link in Nav bar above, to see some other things that I'm passionate about. 
+                            </p>
+                            <br>
+                            <br>
+                    </div>
                 </div>
             </div>
-        </section>
-        <br>
-    <article>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab. </p>
-        <br>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab. </p>
-        <br>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab. </p>
-        <br>
-        <p>Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem unde autem eveniet atque quis, quae minus blanditiis perferendis, optio molestias iusto, quod amet tempora! Alias placeat hic quas odio ab. </p>
-    </article>
-        <br>
+        </article>
+            <br>
+    
+
+    </body>
     <footer>
         <h6>Thank you for stopping by!</h6>
         <p>&copy; Michael Rudolph</p>
