--- a/contact.html
+++ b/contact.html
@@ -49,34 +49,44 @@
     <article>
         <p><h2>Please feel free to reach out to me anytime!</h2></p>
         <br>
-        <div class="container">
-            <div class="row">
-                <div class="col-3">
+        <body>
+            <p class="text-center">
+                <strong><A HREF = "https://www.facebook.com/michael.rudolph.3939/" target="_blank">Me on Facebook</A> </strong>
+                <br>    
+                <strong><A HREF = "https://www.linkedin.com/in/a-michael-rudolph/" target="_blank">Me on LinkedIn</A></strong>
+            </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-3">
+                    </div>
+                    <div class="col-6">
+                        <form>
+                            <div class="form-group">
+                              <label for="exampleFormControlInput1">Name</label>
+                              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="John Doe">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Email address</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                              </div>
+                            <div class="form-group">
+                            </div>
+                            <div class="form-group">
+                              <label for="exampleFormControlTextarea1">Message</label>
+                              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+                            <button type="button" class="btn btn-light"><h2>Send</h2></button>
+                          </form>
+                    </div>
+                    <div class="col-3">
+                    </div>
                 </div>
-                <div class="col-6">
-                    <form>
-                        <div class="form-group">
-                          <label for="exampleFormControlInput1">Name</label>
-                          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="John Doe">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleFormControlInput1">Email address</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                          </div>
-                        <div class="form-group">
-                        </div>
-                        <div class="form-group">
-                          <label for="exampleFormControlTextarea1">Message</label>
-                          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                        </div>
-                        <button type="button" class="btn btn-light"><h2>Send</h2></button>
-                      </form>
-                </div>
-                <div class="col-3">
-                </div>
-            </div>
-    </article>
-        <br>
+                <br>
+
+        </article>
+
+    
+        </body>
     <footer>
         <h6>Thank you for stopping by!</h6>
         <p>&copy; Michael Rudolph</p>
