--- a/portfolio.html
+++ b/portfolio.html
@@ -47,13 +47,14 @@
                 </div>
             </section>
             <br>
-            <article>
+            <article class="container">
             <p><h2>Below are photos of some of the things that I'm passionate about.</h2></p>
             <br>
+            <div class="img-fluid">
                 <main class="passion">
                     <article class="crossfit">
                         <!--Why are the following cards not centered below 700px?-->
-                        <div class="card" style="width: 20rem;">
+                        <div class="card" style="width: 30rem;">
                                 <img src="./assets/Crossfit.jpg" class="card-img-top" alt="Image of two friends enjoying a hard workout."> <!--This class is not on CSS-->
                                 <div class="card-body"> <!--This class is not on CSS-->
                                 <p class="card-text">Crossfit</p>
@@ -62,7 +63,7 @@
                             </div>
                         </article>
                     <article class="nature">
-                            <div class="card" style="width: 20rem;">
+                            <div class="card" style="width: 30rem;">
                                 <img src="./assets/Nature.jpg" class="card-img-top" alt="Image of beautiful forest"> <!--This class is not on CSS-->
                                 <div class="card-body"> <!--This class is not on CSS-->
                                 <p class="card-text">Nature</p>
@@ -71,7 +72,7 @@
                             </div>
                         </article>
                     <article class="coding">
-                            <div class="card" style="width: 20rem;">
+                            <div class="card" style="width: 30rem;">
                                 <img src="./assets/Coding.jpg" class="card-img-top" alt="Image of laptop with code on screen"> <!--This class is not on CSS-->
                                 <div class="card-body"> <!--This class is not on CSS-->
                                 <p class="card-text">Web Development</p>
@@ -81,7 +82,7 @@
                         </article>
 
                     <article class="dogs">
-                            <div class="card" style="width: 20rem;">
+                            <div class="card" style="width: 30rem;" >
                                 <img src="./assets/Dogs.jpg" class="card-img-top" alt="Image of adorable Siberian Husky"> <!--This class is not on CSS-->
                                 <div class="card-body"> <!--This class is not on CSS-->
                                 <p class="card-text">Dogs</p>
@@ -89,7 +90,9 @@
                                 </div>
                             </div>
                         </article>
-                    </main>
+                    </main> 
+            </div>
+
         </article>
     </body>
 
