Updated Grid, Photos, CSS

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                     <br>
                     <br>
                         <h2>
-                            <strong>Leisure</strong>
+                            <strong>Outside</strong>
                         </h2>
                             <p>
-                            When I have the time I love to read fantasy novels. I'll take an epic fantasy novel and a cup of coffee over watching a movie any day.
+                                I'll take any opportunity to get outside. Hike a mountain? Ride a bike? ATV through the wilderness? Yes please to all!
                             </p>
                             <br>
                             <br>
@@ -84,15 +84,16 @@
 
                 <div class="col">
                     <picture>
-                        <img src="./assets/ATV.jpg" class="img-fluid" alt="Responsive image">
+                        <img src="./assets/Fantasy.jpg" class="img-fluid" alt="Responsive image">
+                        <span>Photo by <a href="https://unsplash.com/@joshhild?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Josh Hild</a> on <a href="https://unsplash.com/s/photos/fantasy-book?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
                     </picture>
                     <br>
                     <br>
                         <h2>
-                            <strong>Outside</strong>
+                            <strong>Leisure</strong>
                         </h2>
                             <p>
-                                I'll take any opportunity to get outside. Hike a mountain? Ride a bike? ATV through the wilderness? Yes please to all!
+                                When I have the time I love to read fantasy novels. I'll take an epic fantasy novel and a cup of coffee over watching a movie any day.
                             </p>
                             <br>
                             <br>
