--- a/portfolio.html
+++ b/portfolio.html
@@ -51,47 +51,56 @@
             <p><h2>Below are photos of some of the things that I'm passionate about.</h2></p>
             <br>
             <div class="img-fluid">
-                <main class="passion">
-                    <article class="crossfit">
-                        <!--Why are the following cards not centered below 700px?-->
-                        <div class="card" style="width: 30rem;">
-                                <img src="./assets/Crossfit.jpg" class="card-img-top" alt="Image of two friends enjoying a hard workout."> <!--This class is not on CSS-->
-                                <div class="card-body"> <!--This class is not on CSS-->
-                                <p class="card-text">Crossfit</p>
-                                <p><span>Photo by <a href="https://unsplash.com/@victorfreitas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Victor Freitas</a> on <a href="https://unsplash.com/s/photos/crossfit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
-                                </div>
+                <article class= "container">
+                        <div class="row row-cols-2">
+                        <div class="col">
+                            <p class="text-center">
+                                        <p>
+                                            <div class="card">
+                                                <img src="./assets/Crossfit.jpg" class="card-img-top" alt="Image of two friends enjoying a hard workout.">
+                                                <div class="card-body">
+                                                <p class="card-text">Crossfit</p>
+                                                <p><span>Photo by <a href="https://unsplash.com/@victorfreitas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Victor Freitas</a> on <a href="https://unsplash.com/s/photos/crossfit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
+                                                </div>
+                                            </div>
+                                        </p>
                             </div>
-                        </article>
-                    <article class="nature">
-                            <div class="card" style="width: 30rem;">
-                                <img src="./assets/Nature.jpg" class="card-img-top" alt="Image of beautiful forest"> <!--This class is not on CSS-->
-                                <div class="card-body"> <!--This class is not on CSS-->
-                                <p class="card-text">Nature</p>
-                                <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
-                                </div>
+                        <div class="col">
+                                    <p>
+                                        <div class="card">
+                                            <img src="./assets/Coding.jpg" class="card-img-top" alt="Image of laptop with code on screen"> 
+                                            <div class="card-body">
+                                            <p class="card-text">Web Development</p>
+                                            <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
+                                            </div>
+                                        </div>
                             </div>
-                        </article>
-                    <article class="coding">
-                            <div class="card" style="width: 30rem;">
-                                <img src="./assets/Coding.jpg" class="card-img-top" alt="Image of laptop with code on screen"> <!--This class is not on CSS-->
-                                <div class="card-body"> <!--This class is not on CSS-->
-                                <p class="card-text">Web Development</p>
-                                <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
-                                </div>
+                        <div class="col">
+                                    <p>
+                                        <div class="card">
+                                            <img src="./assets/Nature.jpg" class="card-img-top" alt="Image of beautiful forest">
+                                            <div class="card-body">
+                                            <p class="card-text">Nature</p>
+                                            <p><span>Photo by <a href="https://unsplash.com/@emilep?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Emile Perron</a> on <a href="https://unsplash.com/s/photos/coding?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
+                                            </div>
+                                        </div>
+                                    </p>
+                                    <br>
+                                    <br>
                             </div>
-                        </article>
-
-                    <article class="dogs">
-                            <div class="card" style="width: 30rem;" >
-                                <img src="./assets/Dogs.jpg" class="card-img-top" alt="Image of adorable Siberian Husky"> <!--This class is not on CSS-->
-                                <div class="card-body"> <!--This class is not on CSS-->
-                                <p class="card-text">Dogs</p>
-                                <p><span>Photo by <a href="https://unsplash.com/@victorfreitas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Victor Freitas</a> on <a href="https://unsplash.com/s/photos/crossfit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
-                                </div>
+                        <div class="col">
+                                    <p>
+                                        <div class="card" >
+                                            <img src="./assets/Dogs.jpg" class="card-img-top" alt="Image of adorable Siberian Husky">
+                                            <div class="card-body">
+                                            <p class="card-text">Dogs</p>
+                                            <p><span>Photo by <a href="https://unsplash.com/@victorfreitas?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Victor Freitas</a> on <a href="https://unsplash.com/s/photos/crossfit?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
+                                            </div>
+                                        </div>
+                                    </p>
                             </div>
-                        </article>
-                    </main> 
-            </div>
+                        </div>
+                </article>
 
         </article>
     </body>
