--- a/contact.html
+++ b/contact.html
@@ -57,9 +57,8 @@
             </p>
             <div class="container">
                 <div class="row">
-                    <div class="col-3">
-                    </div>
-                    <div class="col-6">
+
+                    <div class="col-md-8 col-sm-12 col-xs-12 offset-md-2">
                         <form>
                             <div class="form-group">
                               <label for="exampleFormControlInput1">Name</label>
